Fixed extra right spacing and remove overflow issue

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,22 @@ html,body{
   background-color: black;
   margin: 0;
   padding: 0;
+  overflow-x: clip;
   
 }
+
 .nav {
   display: flex;
   position: sticky;
-  top: 25px;
+  top: 16px;
   z-index:1000;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  
   height: 64px;
   background-color: #111111a0;    
   padding: 0px 20px;
-  width: 100%;
+  
   box-sizing: border-box;
 }
 .home-logo{
@@ -24,6 +26,6 @@ html,body{
   position: relative;
   top: 2px;
   
-  right: 20%;
+  /* right: 20%; */
   cursor: pointer;
 }
